snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1-all.jar.sha256
cd9249ce8a9d00e104ee0ae8908e1e9797696d070cd73967bf6454226ec6977d